[gd_scene load_steps=3 format=3 uid="uid://dioaxmgo4gfcx"]

[ext_resource type="AudioStream" uid="uid://8b8u1gmc68n1" path="res://Assets/Music/GMTK2025 Menu Loop.mp3" id="1_1rerr"]
[ext_resource type="Script" uid="uid://bn57ugedqkb6b" path="res://Scripts/menu.gd" id="1_xhh6f"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xhh6f")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_1rerr")
autoplay = true
parameters/looping = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.192157, 0.133333, 0.203922, 1)

[node name="Play" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.159
anchor_top = 0.182
anchor_right = 0.406
anchor_bottom = 0.316
offset_left = -7.16801
offset_top = 71.064
offset_right = -6.71204
offset_bottom = 71.232
text = "PLAY"

[node name="Exit" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.161
anchor_top = 0.457
anchor_right = 0.406
anchor_bottom = 0.583
offset_left = -6.47202
offset_top = 70.864
offset_right = -6.71204
offset_bottom = 71.216
text = "EXIT
"

[connection signal="button_down" from="Play" to="." method="_on_play_button_down"]
[connection signal="button_up" from="Play" to="." method="_on_play_button_up"]
[connection signal="button_down" from="Exit" to="." method="_on_exit_button_down"]
[connection signal="button_up" from="Exit" to="." method="_on_exit_button_up"]
