extends Control


func _ready() -> void:
	pass # Replace with function body.

func _process(delta: float) -> void:
	pass

func _on_play_button_up() -> void:
	pass # Replace with function body.

func _on_play_button_down() -> void:
	pass # Replace with function body.

func _on_exit_button_down() -> void:
	pass # Replace with function body.

func _on_exit_button_up() -> void:
	pass # Replace with function body.
